--- a/src/containers/Register/Register.scss
+++ b/src/containers/Register/Register.scss
@@ -34,7 +34,7 @@ $blur-effect: blur(70px);
     align-items: center;
     padding: 2rem 3rem;
 
-    form {
+    .form {
       position: relative;
       width: 100%;
 
