--- a/src/components/HomeHeader.scss
+++ b/src/components/HomeHeader.scss
@@ -1,48 +1,309 @@
-.header-container {
-    height: 80px;
+//
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Quicksand", sans-serif !important;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.containers {
+  max-width: 1400px;
+}
+.container {
+  max-width: 1200px;
+  margin: auto;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+.body-container {
+  .header-container {
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 7px 20px;
+    height: 130px;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    padding: 0 10px;
-    .header-content {
-        height: 100%;
-        width: 100%;
+    background-color: rgb(255, 255, 255);
+    z-index: 1;
+    border-bottom: 1px solid rgba(103, 98, 98, 0.3);
+    li {
+      list-style: none;
+      text-decoration: none;
+    }
+    .header-top {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .logo {
+        flex: 1.2;
+        background-image: url("../assets/images/logo.png");
+        height: 65px;
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+
+      .menu {
+        flex: 4;
         display: flex;
-        .left-content {
-            width: 20%;
+        font-weight: bold;
+        a {
+          text-decoration: none;
+          color: black;
+          font-size: 19px;
+          font-family: "Quicksand", sans-serif;
+        }
+        li:hover .sub-menu {
+          z-index: 10;
+          display: block;
+          visibility: visible;
+          top: 70px;
+        }
+        li {
+          text-align: center;
+          border-right: 2px solid black;
+          width: 180px;
+          .sub-menu {
+            z-index: 10;
+            top: 90px;
+            position: relative;
+            visibility: hidden;
+            width: 260px;
+            border-radius: 10px;
+            position: absolute;
+            transition: 0.1s;
+            background-color: rgb(91, 82, 82);
+            padding: 10px;
+            margin-left: 45px;
+            li {
+              width: 240px;
+              text-align: left;
+              border-right: none;
+              margin-top: 15px;
+              padding-right: 10px;
+              border-bottom: 2px solid white;
+              a {
+                line-height: 25px;
+                font-weight: normal;
+                color: white;
+              }
+            }
+            li:first-of-type {
+              margin-top: 0;
+            }
+          }
+        }
+      }
+
+      .others {
+        display: flex;
+        flex: 1.2;
+        position: relative; /* Để form có thể định vị tương đối với .others */
+        ion-icon {
+          margin-top: 10px;
+          font-size: 25px;
+          color: black;
+        }
+        input {
+          border: none;
+          border-bottom: 1px solid black;
+        }
+        li:first-child {
+          border-right: 1px solid black;
+          padding-right: 30px;
+        }
+        li {
+          margin-left: 25px;
+          a {
+            display: flex;
+            p {
+              color: black;
+              margin-left: 5px;
+              margin-top: 14px;
+            }
+          }
+        }
+
+        /* Định dạng form thông tin người dùng */
+        .user-info-form {
+          display: none; /* Ẩn form mặc định */
+          position: fixed; /* Sử dụng fixed để cố định form trên màn hình */
+          top: 0; /* Bắt đầu từ đỉnh màn hình */
+          right: 0; /* Sát bên phải */
+          width: 400px; /* Chiều rộng cố định */
+          height: 100vh; /* Chiều cao bằng màn hình */
+          background-color: rgb(80, 69, 69); /* Màu nâu đậm làm nền */
+          z-index: 1000; /* Đảm bảo form nằm trên banner */
+          padding: 20px;
+          border-radius: 0; /* Bỏ bo góc để form trải dài */
+          transform: translateX(100%); /* Ẩn form ra ngoài bên phải */
+          transition: transform 0.3s ease; /* Hiệu ứng trượt mượt mà */
+
+          &.active {
+            display: block; /* Hiện form khi có class active */
+            transform: translateX(0); /* Trượt form vào màn hình */
+          }
+          .password-group {
+            position: relative;
+          }
+
+          .password-wrapper {
+            position: relative;
             display: flex;
             align-items: center;
-            .menu-icon {
-                font-size: 30px;
-                color: rgb(12, 12, 12);
-                cursor: pointer;
-                padding-right: 5px;
-            }
-            .header-logo {
-                background: url("../assets/images/logo.png");
-                background-size: contain;
-                background-repeat: no-repeat;
-                background-position: center;
+          }
+
+          .password-wrapper input {
+            width: 100%;
+            padding-right: 40px; /* Để lại khoảng trống cho biểu tượng con mắt */
+          }
+
+          .toggle-password {
+            position: absolute;
+            right: 10px;
+            cursor: pointer;
+          }
+
+          .toggle-password ion-icon {
+            font-size: 20px;
+            color: #f5f5dc; /* Màu kem nhạt giống các thành phần khác trong form */
+            transition: color 0.3s ease;
+          }
+
+          .toggle-password ion-icon:hover {
+            color: #fff; /* Chuyển sang trắng khi hover */
+          }
+          .r1 {
+            display: flex;
+            .user-img {
+              width: 125px;
+              height: 125px;
+              img {
                 width: 100%;
                 height: 100%;
-                cursor: pointer;
+                object-fit: cover;
+              }
             }
-        }
-        .center-content {
-            width: 60%;
+          }
+
+          .form-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            .sub-content {
-                cursor: pointer;
+            margin-bottom: 15px;
+
+            h2 {
+              font-size: 18px;
+              margin: 0;
+              color: #f5f5dc; /* Màu chữ kem nhạt trên nền nâu */
             }
-        }
-        .right-content {
-            width: 20%;
+
+            .close-form {
+              cursor: pointer;
+              font-size: 24px;
+              color: #f5f5dc; /* Màu chữ kem nhạt */
+              font-weight: bold;
+              transition: color 0.3s ease;
+
+              &:hover {
+                color: #fff; /* Chuyển sang trắng khi hover */
+              }
+            }
+          }
+
+          /* Định dạng các trường trong form */
+          form {
             display: flex;
-            justify-content: center;
-            align-items: center;
-            .stuff-content {
-                cursor: pointer;
+            flex-direction: column; /* Sắp xếp các trường theo cột */
+          }
+
+          .form-group {
+            margin-bottom: 15px;
+            label {
+              display: block;
+              font-size: 14px;
+              color: #f5f5dc; /* Màu chữ kem nhạt */
+              margin-bottom: 5px;
             }
+
+            input {
+              width: 100%;
+              padding: 8px;
+              border-bottom: 3px solid #f5f5dc; /* Viền màu nâu nhạt */
+              border-radius: 3px;
+              font-size: 14px;
+              background-color: transparent; /* Màu nền input là màu kem nhạt */
+              color: #f5f5dc; /* Màu chữ trong input là màu nâu đậm */
+              margin-bottom: 10px;
+            }
+          }
+          .r1 {
+            .form-group {
+              margin-left: 20px;
+            }
+          }
+          .user-img-add {
+            margin-top: -22px;
+            margin-bottom: 15px;
+
+            input {
+              height: 27px;
+              width: 125px;
+              padding: 5px;
+              text-align: center;
+              border-radius: 5px;
+            }
+            margin-top: -22px;
+            margin-bottom: 15px;
+            label {
+              display: inline-block;
+              height: 27px;
+              width: 125px;
+              padding: 5px;
+              text-align: center;
+              border-radius: 5px;
+              background-color: #f5f5dc; /* Màu kem nhạt */
+              color: rgb(80, 69, 69); /* Màu nâu đậm */
+              cursor: pointer; /* Con trỏ chuột khi hover */
+              font-size: 14px;
+              line-height: 17px; /* Căn giữa chữ theo chiều dọc */
+              transition: background-color 0.3s ease;
+            }
+            label:hover {
+              background-color: #fff; /* Chuyển sang trắng khi hover */
+            }
+          }
         }
+      }
     }
+    .searchs {
+      display: flex;
+      margin-top: 10px;
+      justify-content: center;
+      input {
+        border: 1px solid rgb(91, 82, 82, 0.3);
+        width: 750px;
+        height: 40px;
+        padding: 10px;
+      }
+      ion-icon {
+        opacity: 30%;
+        margin-top: 10px;
+        margin-left: 710px;
+        position: absolute;
+        width: 20px;
+        height: 20px;
+      }
+    }
+  }
 }
