--- a/src/containers/Register/Register.scss
+++ b/src/containers/Register/Register.scss
@@ -13,7 +13,7 @@ $blur-effect: blur(70px);
   font-family: "Poppins", sans-serif;
 }
 
-.body {
+.body-register {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -32,35 +32,34 @@ $blur-effect: blur(70px);
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2rem 3rem;
+    padding: 2rem 1rem;
 
-    .form {
+    .form-container {
       position: relative;
       width: 100%;
+      max-width: 700px;
 
       .home-button {
         display: flex;
         justify-content: space-between;
         align-items: center;
         position: absolute;
-        top: 10px;
-        left: 10px;
+        top: -24px;
+        left: -7px;
 
-        a {
-          ion-icon {
-            font-size: 20px;
-            color: $primary-color;
-            border: 2px solid $white;
-            padding: 7px;
-            border-radius: $border-radius;
-            background-color: $white;
-            transition: $transition;
+        a ion-icon {
+          font-size: 25px;
+          color: #565151;
+          border: 2px solid white;
+          padding: 7px;
+          border-radius: 20px;
+          background-color: white;
+          transition: 0.3s;
 
-            &:hover {
-              background-color: $primary-color;
-              color: $white;
-              border: 2px solid $primary-color;
-            }
+          &:hover {
+            background-color: #565151;
+            color: white;
+            border: 2px solid #565151;
           }
         }
       }
@@ -82,10 +81,15 @@ $blur-effect: blur(70px);
             margin: 30px 15px;
             border-bottom: 2px solid $primary-color;
             color: $primary-color;
-
+            .toggle-password {
+              ion-icon {
+                cursor: pointer;
+              }
+            }
             input {
               width: 100%;
-              max-width: 240px;
+              max-width: 500px;
+              width: 300px;
               height: 60px;
               background: transparent;
               border: none;
@@ -186,7 +190,9 @@ $blur-effect: blur(70px);
             margin: 30px 15px;
             border-bottom: 2px solid $primary-color;
             color: $primary-color;
-            width: 240px;
+            width: 100%;
+            max-width: 500px;
+            width: 300px;
 
             label {
               position: absolute;
@@ -336,7 +342,7 @@ $blur-effect: blur(70px);
           }
         }
         button {
-          margin-left: 172px;
+          margin-left: 227px;
           width: 100%;
           max-width: 200px;
           height: 40px;
@@ -349,7 +355,7 @@ $blur-effect: blur(70px);
           font-weight: 600;
           transition: all 0.4s ease;
           p {
-            padding-top: 5px;
+            padding-top: 7px;
           }
         }
 
@@ -371,6 +377,7 @@ $blur-effect: blur(70px);
       }
       a:hover {
         text-decoration: underline;
+        cursor: pointer;
       }
     }
   }
